[tool.poetry]
name = "appium-test"
version = "0.1.0"
description = ""
authors = ["dgotlieb <dgotlieb8@gmail.com>"]
readme = "README.md"
packages = [{include = "appium_test"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "4.8.2"
appium-python-client = "2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
